# cli-rs

./: Cargo.toml  LICENSE  README.md  bacon.toml  sonar-project.properties
.github/workflows/: checks.yml  pr-checks.yml
cli-man/: Cargo.toml
cli-man/src/: downloader.rs  lib.rs  terraform.rs
cli-man/tests/: lib.rs  traits.rs
cli-run/: Cargo.toml
cli-run/src/: lib.rs
