[workspace]
resolver = "3"
members = ["cli-man", "cli-run"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Zakaria Mansouri <zakman.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/zibanpirate/cli-rs"

[workspace.dependencies]
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
zip = "2"
dotenv = "0.15"
